--- a/index.html
+++ b/index.html
@@ -5,40 +5,62 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <!-- ADDED VIEWPORT TAG AND OTHER DECLARATIONS -->
+  <meta name = "viewport" content= "width=device-width, initial-scale= 1">
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
-  <header>
-    <nav>
+  <!-- Added role for header -->
+  <header role= "banner">
+    <!-- Added a skip link to skip tab through map and move focus to restaurant filter-->
+    <!-- <a href= "#neighborhoods-select" class= "skip-link" tabindex= "0">Skip map to filter results</a> -->
+    <!-- Added role for nav -->
+    <nav role= "navigation">
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
-
-  <main id="maincontent">
+  <!-- Added role for main section -->
+  <main id="maincontent" role= "main">
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label= "Map of all restaurants nearby"></div>
     </section>
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
-          <option value="all">All Neighborhoods</option>
+        <!-- Added role for listbox -->
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" role= "listbox">
+          <!-- Added role for options within listbox -->
+          <option value="all" role= "option">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
-          <option value="all">All Cuisines</option>
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" role= "listbox">
+          <option value="all" role= "option">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <!-- /* Added aria label for restaurant list */ -->
+      <ul id="restaurants-list" aria-label= "restaurant list"></ul>
     </section>
   </main>
+  <script>
+  //Register service worker to enable feeding of data to website offline
+    // if ('serviceWorker' in navigator) {
+    //   window.addEventListener('load', function() {
+    //     navigator.serviceWorker.register('/sw.js').then(function(registration) {
+    //       console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    //     }, function(err) {
+    //       console.log('ServiceWorker registration failed: ', err);
+    //     });
+    //   });
+    // }
+  </script>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="sw.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 
-
-  <footer id="footer">
+  <!-- Added role for footer -->
+  <footer id="footer" role= "contentinfo">
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
