--- a/restaurant.html
+++ b/restaurant.html
@@ -7,58 +7,90 @@
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <!-- ADDED VIEWPORT TAG AND OTHER DECLARATIONS -->
+  <meta name = "viewport" content= "width=device-width, initial-scale= 1">
   <title>Restaurant Info</title>
 </head>
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <!-- Added role for header -->
+  <header role= "banner">
     <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+    <!-- Added role for nav -->
+    <nav role= "navigation">
+      <!-- description for home link -->
+      <div id= "description" style= "display:none;">Click to go back to home page</div>
+      <h1 ><a href="/" aria-describedby = "description">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" >
-      <li><a href="/">Home</a></li>
+    <ul id="breadcrumb">
+      <!-- Added tab order for home link -->
+      <li tabindex= "0"><a href="/" aria-describedby= "description">Home</a></li>
     </ul>
+
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <!-- Added role for main -->
+  <main id="maincontent" role= "main">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <!-- Hiding map from screen readers -->
+    <section id="map-container" aria-hidden = "true">
+      <div id="map" aria-hidden = "true"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
+      <div class= "child-container">
       <h1 id="restaurant-name"></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
+    </div>
+    <div class= "child-container">
       <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <!-- Added tab index and label for working hours table -->
+      <table id="restaurant-hours" tabindex="0" aria-label= "Working hours"></table>
+    </div>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <!-- Added tab index and label for reviews section -->
+    <section id="reviews-container"  aria-label= "reviews from customers" tabindex="0">
+      <ul id="reviews-list" tabindex="-1"></ul>
     </section>
     <!-- End reviews -->
   </main>
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  <!-- Added role for footer -->
+  <footer id="footer" role= "contentinfo">
+    <!-- Added description for footer link -->
+    Copyright (c) 2017 <a href="/" aria-describedby="description"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
+  <script>
+  //Register service worker to enable feeding of data to website offline
+    // if ('serviceWorker' in navigator) {
+    //   window.addEventListener('load', function() {
+    //     navigator.serviceWorker.register('/sw.js').then(function(registration) {
+    //       console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    //     }, function(err) {
+    //       console.log('ServiceWorker registration failed: ', err);
+    //     });
+    //   });
+    // }
+  </script>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <!-- Beginning scripts -->
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
+  <!-- service worker script -->
+  <script type="application/javascript" charset="utf-8" src="sw.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
