Included extra comments

--- a/restaurant.html
+++ b/restaurant.html
@@ -50,6 +50,7 @@
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
     </div>
+    <!-- Created a <div> child-container for image and working hours of restaurant appear as a row and not column using flex -->
     <div class= "child-container">
       <p id="restaurant-address"></p>
       <!-- Added tab index and label for working hours table -->
