Added aria role for main and changed h1 to h2

--- a/restaurant.html
+++ b/restaurant.html
@@ -35,8 +35,8 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <!-- Added role for main -->
-  <main id="maincontent" role= "main">
+  <!-- Added role and aria-label for main -->
+  <main id="maincontent" role= "main" aria-label= "restaurant details and reviews">
     <!-- Beginning map -->
     <!-- Hiding map from screen readers -->
     <section id="map-container" aria-hidden = "true">
@@ -46,7 +46,7 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <div class= "child-container">
-      <h1 id="restaurant-name"></h1>
+      <h2 id="restaurant-name"></h2>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
     </div>
