added role for map

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
   <!-- Added role for main section -->
   <main id="maincontent" role= "main">
-    <section id="map-container" role= "region" aria-labelledby= "map-description">
+    <section id="map-container" role= "region" aria-labelledby= "map-description" role= "application">
       <p id= "map-description" style= "display:none;">Map indicating restaurants in the vicinity</p>
       <div id="map"></div>
     </section>
